Updated comment code

--- a/Notebooks/Demo_Prompt.ipynb
+++ b/Notebooks/Demo_Prompt.ipynb
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9132b56d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_ollama_response(data, url='https://ollama.loweffort.meme/api/generate'):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Sends a streaming generation request to your local Ollama API.\n",
     "\n",
     "    Args:\n",
@@ -89,7 +89,7 @@
     "\n",
     "    Returns:\n",
     "        str: The complete generated text response from the model.\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "\n",
     "    output = []\n",
     "\n",
@@ -99,7 +99,7 @@
     "                try:\n",
     "                    j = json.loads(line)\n",
     "                except Exception as e:\n",
-    "                    print(\"DEBUG LINE:\", line.decode())  # inspect what’s actually returned\n",
+    "                    print(f'DEBUG LINE: {line.decode()}')\n",
     "                    raise\n",
     "                if 'response' in j:\n",
     "\n",
@@ -107,9 +107,9 @@
     "                    print(j['response'], end='')  \n",
     "                    output.append(j['response'])\n",
     "                    \n",
-    "    # Newline after streaming\n",
+    "    # Newline after streaming:\n",
     "    print('\\n')\n",
-    "    final_output = f'{\"\".join(output)}\\n'\n",
+    "    final_output = f'{''.join(output)}\\n'\n",
     "    return final_output"
    ]
   },
@@ -123,12 +123,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Steam rises warm from bowl,  \n",
-      "Aroma fills the winter,  \n",
-      "Sweetness melts the soul.\n",
+      "Steam curls in the pot,  \n",
+      "Fragrant broth warms the evening,  \n",
+      "Comfort in a bowl.\n",
       "\n",
-      "I’m happy to write another haiku!  \n",
-      "Could you share the first haiku or let me know what topic it was about? That way I’ll keep the second one on the same theme.\n",
+      "Sure thing! What was the subject of the first haiku? That way I can craft a second one that stays in the same theme.\n",
       "\n"
      ]
     }
@@ -240,11 +239,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure thing! 🎉  \n",
-      "- **Pro tip**: Find the weirdest thing on YouTube (like a cat doing calculus) and watch it until you’re convinced cats are secretly geniuses.  \n",
-      "- **Or**: Grab a bag of chips, flip a coin, and do whatever the coin lands on – just hope it says “more snacks.”  \n",
-      "- **Bonus**: If you’re feeling wild, open a random meme generator, type in “life advice,” and stare at the nonsense for 10 minutes. 🌟  \n",
-      "Have a blast! 🚀\n"
+      "**Something super fun?**  \n",
+      "\n",
+      "- Build a pillow‑fort and host a tea‑party for your cat.  \n",
+      "- Take a stranger to a karaoke bar and perform *“The Wheels on the Bus”* in a cape.  \n",
+      "- Try juggling invisible tacos—spicy, mysterious, zero risk of getting food on yourself.  \n",
+      "\n",
+      "Pick one, go wild, and let the awkwardness be the highlight! 😜\n"
      ]
     }
    ],
@@ -267,12 +268,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Because humans love to be mildly confused and mildly entertained at the same time. 🍿  \n",
-      "- **Cat calculus**: Cats are mysterious, math is mysterious, combine them and you get pure curiosity overload.  \n",
-      "- **Coin‑flip snacks**: Decisions made by a coin are the ultimate “no‑pressure” way to avoid regret. If it lands on “more snacks,” you’re basically winning.  \n",
-      "- **Meme generator**: Watching nonsensical advice is like a mental mini‑vacation—no effort, zero risk of actually learning anything (and that’s half the fun).  \n",
+      "Because **fun** is basically the brain’s way of giving you a *“whoa‑wow”* sticker for doing something that feels a little like a playground for your adult self. Let’s break it down:\n",
       "\n",
-      "Bottom line: you get dopamine, you avoid boring work, and you get a good story to brag about later. 🚀\n"
+      "| 🎈 Idea | Why the brain goes “*yay!*” |\n",
+      "|---------|------------------------------|\n",
+      "| **Pillow‑fort + cat tea‑party** | 🛌 *Comfort‑zone = low‑stress zone* – you’re literally building a safe haven, which turns your cortisol into chocolate‑sweet “relaxation” hormones. Plus, cats are the ultimate “feline‑therapy” partners. |\n",
+      "| **Karaoke with a stranger in a cape** | 🎤 *Novelty + Social Bonding* – singing “The Wheels on the Bus” in a ridiculous costume forces you to laugh at yourself and at the crowd, releasing dopamine like a disco ball. And a stranger? You’re doing a spontaneous act of kindness—good vibes for everyone. |\n",
+      "| **Juggling invisible tacos** | 🌮 *Absurdity + Cognitive Flexibility* – juggling anything is a brain workout. Invisible tacos keep you guessing and add a hilarious “no‑food‑mess” bonus. Your brain gets a quick puzzle that ends in a giggle‑trigger. |\n",
+      "\n",
+      "**Bottom line:** each of these is a low‑effort, high‑laugh, “just‑because‑we’re‑human” activity. They mix novelty, creativity, social interaction, and a dash of silliness—exact ingredients that make the brain go *“Woo‑hoo, we’re having a blast!”* So go ahead, pick one, and let the fun‑mood machine rev up! 🚀\n"
      ]
     }
    ],
@@ -299,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DATA_Env",
+   "display_name": "en605645",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
