Added Qwen3 models, with examples

--- a/Notebooks/Demo_Prompt.ipynb
+++ b/Notebooks/Demo_Prompt.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9132b56d",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
     "                    \n",
     "    # Newline after streaming:\n",
     "    print('\\n')\n",
-    "    final_output = f'{''.join(output)}\\n'\n",
+    "    final_output = f'{\"\".join(output)}\\n'\n",
     "    return final_output"
    ]
   },
@@ -123,11 +123,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Steam curls in the pot,  \n",
-      "Fragrant broth warms the evening,  \n",
-      "Comfort in a bowl.\n",
+      "Morning soup steams bright,  \n",
+      "Steam curls in quiet silence,  \n",
+      "Warmth in each spoonful.\n",
       "\n",
-      "Sure thing! What was the subject of the first haiku? That way I can craft a second one that stays in the same theme.\n",
+      "I’d love to keep the theme going! Could you remind me what the first haiku was about, or paste it again? That way I can craft a second haiku that stays in the same spirit.\n",
       "\n"
      ]
     }
@@ -189,8 +189,8 @@
     "        data = {\n",
     "            'model': self.model,\n",
     "            'messages': self.messages,\n",
-    "            'stream': self.stream\n",
-    "        }\n",
+    "            'stream': self.stream,\n",
+    "            }\n",
     "\n",
     "        output = []\n",
     "        with requests.post(self.url, json=data, stream=self.stream) as r:\n",
@@ -239,13 +239,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Something super fun?**  \n",
+      "Sure thing! 🎉\n",
       "\n",
-      "- Build a pillow‑fort and host a tea‑party for your cat.  \n",
-      "- Take a stranger to a karaoke bar and perform *“The Wheels on the Bus”* in a cape.  \n",
-      "- Try juggling invisible tacos—spicy, mysterious, zero risk of getting food on yourself.  \n",
+      "- **Start a TikTok dance challenge** – find a goofy song and just mash it up with random moves.\n",
+      "- **Road‑trip to the nearest weird landmark** – like that giant cheese wheel or the UFO museum.\n",
+      "- **Game‑night with snacks** – board games, card‑games, or even a “who can make the best meme” contest.\n",
+      "- **DIY pizza + pizza‑tasting** – create a pizza from scratch, then rate each topping combo like a critic.\n",
+      "- **Flash mob in the park** – recruit friends, pick a song, and show up out of nowhere.  \n",
+      "- **Learn a new skill in 30 mins** – like juggling, a magic trick, or how to juggle a pineapple (just kidding, but try it).\n",
       "\n",
-      "Pick one, go wild, and let the awkwardness be the highlight! 😜\n"
+      "Pick whatever tickles your fancy and have a blast! 😜\n"
      ]
     }
    ],
@@ -268,15 +271,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Because **fun** is basically the brain’s way of giving you a *“whoa‑wow”* sticker for doing something that feels a little like a playground for your adult self. Let’s break it down:\n",
+      "Because it’s like a *spontaneous dopamine factory*.  \n",
+      "- **TikTok dance** = instant video bragging rights + viral hype.  \n",
+      "- **Road‑trip to a weird landmark** = novelty + “weirdness” bragging points.  \n",
+      "- **Game‑night** = social bonding + friendly competition.  \n",
+      "- **DIY pizza** = edible creativity + instant snack gratification.  \n",
+      "- **Flash mob** = shock value + shared “what‑did‑that‑just‑happen‑to‑me” moment.  \n",
+      "- **Learn a new skill** = brain‑boosting novelty + the sweet “I can do that now” feeling.  \n",
       "\n",
-      "| 🎈 Idea | Why the brain goes “*yay!*” |\n",
-      "|---------|------------------------------|\n",
-      "| **Pillow‑fort + cat tea‑party** | 🛌 *Comfort‑zone = low‑stress zone* – you’re literally building a safe haven, which turns your cortisol into chocolate‑sweet “relaxation” hormones. Plus, cats are the ultimate “feline‑therapy” partners. |\n",
-      "| **Karaoke with a stranger in a cape** | 🎤 *Novelty + Social Bonding* – singing “The Wheels on the Bus” in a ridiculous costume forces you to laugh at yourself and at the crowd, releasing dopamine like a disco ball. And a stranger? You’re doing a spontaneous act of kindness—good vibes for everyone. |\n",
-      "| **Juggling invisible tacos** | 🌮 *Absurdity + Cognitive Flexibility* – juggling anything is a brain workout. Invisible tacos keep you guessing and add a hilarious “no‑food‑mess” bonus. Your brain gets a quick puzzle that ends in a giggle‑trigger. |\n",
-      "\n",
-      "**Bottom line:** each of these is a low‑effort, high‑laugh, “just‑because‑we’re‑human” activity. They mix novelty, creativity, social interaction, and a dash of silliness—exact ingredients that make the brain go *“Woo‑hoo, we’re having a blast!”* So go ahead, pick one, and let the fun‑mood machine rev up! 🚀\n"
+      "So basically, each idea mixes *novelty*, *social connection*, and a *little challenge* – the perfect recipe for a fun adrenaline spike! 🎉\n"
      ]
     }
    ],
@@ -285,20 +288,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2229014",
+   "metadata": {},
+   "source": [
+    "# Model Options"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78699087",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "models = ['gpt-oss:20b', 'gpt-oss:120b', 'qwen3:4b', 'qwen3:8b', ]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d2d25c46",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LMAO, here’s a **zero-effort, 100% brain-dead fun idea** that’s so low-effort it’s practically a crime against human productivity:  \n",
+      "\n",
+      "**Stare at your ceiling for 10 minutes while silently debating whether it’s judging you.**  \n",
+      "\n",
+      "*(Bonus points if you pretend it’s a cosmic entity that only speaks in the language of your childhood snack cravings.)*  \n",
+      "\n",
+      "**Psychologist says:** *\"This activity has 0% effort, 100% existential dread, and 99.9% chance of making you smile.\"* 🙏  \n",
+      "\n",
+      "Your ceiling is judging you. *Again*. 😂\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_session = OllamaChatSession(\n",
+    "    model = models[3],\n",
+    "    system_prompt = 'You prefer to make low-effort responses and shitpost.',\n",
+    "    )\n",
+    "\n",
+    "test_session.ask('What is something fun to do?');"
+   ]
   }
  ],
  "metadata": {
