--- a/Notebooks/Demo_Prompt.ipynb
+++ b/Notebooks/Demo_Prompt.ipynb
@@ -339,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "en605645",
+   "display_name": "project-genai",
    "language": "python",
-   "name": "python3"
+   "name": "project"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
