--- a/Documentation/Strategy.ipynb
+++ b/Documentation/Strategy.ipynb
@@ -5,18 +5,34 @@
    "id": "e1b5fa10",
    "metadata": {},
    "source": [
-    "# Workflow:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "860542f8",
-   "metadata": {},
-   "source": [
+    "# Workflow:\n",
+    "\n",
     "1) User inputs requirements to GUI\n",
     "2) GUI structures requirements as JSON and passes them to Recipe Generator\n",
     "3) Recipe Generator outputs a recipe to Validator\n",
     "4) If recipe passes, send results to user. Otherwise loop back to Recipe Generator with feedback."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0002edbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of what the Generator receives from user/GUI:\n",
+    "user_request = {'User': True, \n",
+    "                'Allergens': ['oxygen', 'water',],\n",
+    "                'Ingredients': ['oxygen', 'water',],\n",
+    "                \n",
+    "\n",
+    "               }\n",
+    "\n",
+    "# Example of what the Generator receives from Validator?\n",
+    "user_request = {'User': True, \n",
+    "                'Allergens': False,\n",
+    "\n",
+    "               }"
    ]
   },
   {
@@ -28,15 +44,11 @@
     }
    },
    "source": [
-    "# Key metrics:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0ec62514",
-   "metadata": {},
-   "source": [
+    "# Key metrics:\n",
     "\n",
+    "* Are the ingredients structured correctly?\n",
+    "    * Quantity, Unit, Item, Preparation (optional)\n",
+    "    * e.g. 1 cup Cremini Mushroom, diced\n",
     "* Is the recipe structured correctly?\n",
     "* Does the recipe meet the user's criteria?"
    ]
@@ -46,31 +58,19 @@
    "id": "afbc754b",
    "metadata": {},
    "source": [
-    "# Evaluation Strategy:"
+    "# Evaluation Strategy:\n",
+    "\n",
+    "Vibes and feelings"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0109ea4",
+   "id": "12b5dd5b",
    "metadata": {},
    "source": [
-    "Dunno lol"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00a5201e",
-   "metadata": {},
-   "source": [
-    "# Misc. Notes:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "63917629",
-   "metadata": {},
-   "source": [
-    "Stuff and things"
+    "# Changelog/Lessons Learned/Key Takeaways:\n",
+    "\n",
+    "We tested stuff"
    ]
   }
  ],
