--- a/Documentation/Strategy.ipynb
+++ b/Documentation/Strategy.ipynb
@@ -25,7 +25,6 @@
     "                'Allergens': ['oxygen', 'water',],\n",
     "                'Ingredients': ['oxygen', 'water',],\n",
     "                \n",
-    "\n",
     "               }\n",
     "\n",
     "# Example of what the Generator receives from Validator?\n",
@@ -60,7 +59,8 @@
    "source": [
     "# Evaluation Strategy:\n",
     "\n",
-    "Vibes and feelings"
+    "* Vibes and feelings\n",
+    "* BLEU Score?"
    ]
   },
   {
