--- a/Notebooks/Demo_Prompt.ipynb
+++ b/Notebooks/Demo_Prompt.ipynb
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['gpt-oss:20b', 'gpt-oss:120b', 'qwen3:4b', 'qwen3:8b', ]"
+    "models = ['gpt-oss:20b', 'gpt-oss:120b', 'qwen3:4b', 'qwen3:8b', 'gemma3:12b', 'gemma3:27b',]"
    ]
   },
   {
